--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,7 @@
 {
   "alwaysUpdateLinks": true,
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "useMarkdownLinks": true,
+  "newLinkFormat": "absolute",
+  "promptDelete": false
 }
